# gbz-base

./: .gitignore  Cargo.toml  GAF.md  LICENSE  README.md  RELEASES.md  build-wasm.sh  package.json
src/: alignment.rs  db.rs  formats.rs  gaf_sort.rs  gfa.rs  internal.rs  lib.rs  path_index.rs  query.rs  read_set.rs  subgraph.rs  tests.rs  utils.rs
src/alignment/: mapping.rs  tests.rs
src/db/: tests.rs
src/formats/: tests.rs
src/gaf_sort/: tests.rs
src/path_index/: tests.rs
src/read_set/: tests.rs
src/subgraph/: query.rs  tests.rs
test-data/: bad.gaf  bidirectional.gbwt  empty.gbwt  example.chains  good.gaf  micb-kir3dl1.chains  micb-kir3dl1.gbz  micb-kir3dl1.gfa  micb-kir3dl1_HG003.gaf  micb-kir3dl1_HG003.gbwt  no_header.gaf  shuffled.gaf
