[package]
name = "gbz-base"
version = "0.1.0"
authors = ["Jouni Siren <jouni.siren@iki.fi>"]
edition = "2021"
description = "GBZ-compatible pangenome graph stored in SQLite."
license = "MIT"
readme = "README.md"
repository = "https://github.com/jltsiren/gbz-base"

[dependencies]
gbwt = { git = "https://github.com/jltsiren/gbwt-rs", branch = "main" }
simple-sds = { git = "https://github.com/jltsiren/simple-sds", branch = "main" }
rusqlite = { version = "0.29", features = ["bundled"] }
getopts = { version = "0.2" }

[[bin]]
name = "gbz2db"
test = false
bench = false
doc = false

[[bin]]
name = "query"
test = false
bench = false
doc = false

[lib]
# Build a .wasm file of the library in addition to the .rlib to link Rust code
crate-type = ["cdylib", "rlib"]
name = "gbz_base"
path = "src/lib.rs"
