[package]
name = "gbz-base"
version = "0.3.0"
edition = "2024"
description = "Pangenome file formats based on SQLite"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jltsiren/gbz-base"

[dependencies]
gbz = { version = "0.5.1" }
simple-sds = { version = "0.4" }
pggname = { version = "0.2" }
# Use fallible_uint for getting usize values from query results.
rusqlite = { version = "0.38", features = ["bundled", "fallible_uint"] }
getopts = { version = "0.2" }
flate2 = { version = "1.1" }
zstd = { version = "0.13" }
rand = { version = "0.9", optional = true }

[dev-dependencies]
rand = "0.9"

[[bin]]
name = "gbz2db"
test = false
bench = false
doc = false

[[bin]]
name = "gaf2db"
test = false
bench = false
doc = false

[[bin]]
name = "db2gaf"
test = false
bench = false
doc = false

[[bin]]
name = "query"
test = false
bench = false
doc = false

[lib]
# Build a .wasm file of the library in addition to the .rlib to link Rust code
crate-type = ["cdylib", "rlib"]
name = "gbz_base"
path = "src/lib.rs"
